Add support for loading legacy plugins