@@ -4,7 +4,7 @@
 
 	<groupId>lc.kra.jds</groupId>
 	<artifactId>jds</artifactId>
-	<version>2.4.0</version>
+	<version>2.5.0</version>
 	
 	<name>JDigitalSimulator</name>
 	<description>JDigitalSimulator is a plattform independend Electronic Design Automation software entirely build in Java</description>
@@ -28,6 +28,21 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
+	<dependencies>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>9.6</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-commons</artifactId>
+			<version>9.6</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<resources>
 			<resource>
@@ -104,6 +119,7 @@
 								<opts>
 									<opt>-Xss4m</opt>
 									<opt>--add-opens java.base/java.io=ALL-UNNAMED</opt>
+									<opt>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</opt>
 								</opts>
 							</jre>
 							<versionInfo>
